# DysarthriaNSR

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Lab4_Speech_Processing.ipynb  OVERVIEW.md  README.md  ROADMAP.md  TODO.md  dataloader.py  download.py  evaluate.py  manifest.py  pyproject.toml  requirements.txt  run_pipeline.py  train.py
.github/: copilot-instructions.md
data/processed/: raw_extraction_map.csv  torgo_neuro_symbolic_manifest.csv
docs/: 01_PROJECT_OVERVIEW.md  02_COMPLETED_WORK.md  03_ACTION_ITEMS.md  04_RESEARCH_AUDIT.md  DysarthriaNSR_NextSteps.md  DysarthriaNSR_ResearchAudit.md  architecture.md  changes.md  contributing.md  data.md  dataset.md  evaluation.md  experiments.md  implementation_plan.md  pipeline.md  reproducibility.md  task.md  training.md
results/: loso_v1_loso_progress.json  loso_v1_loso_summary.json
results/ablation_neural_only/: config.yaml  evaluation_results.json  per_phoneme_per.json
results/ablation_neural_only_v7/: config.yaml  evaluation_results.json  per_by_manner.json  per_phoneme_per.json  rule_pair_confusion.json
results/ablation_no_constraint_matrix_v6/: config.yaml  evaluation_results.json  per_by_manner.json  per_phoneme_per.json  rule_pair_confusion.json
results/baseline_v1/: evaluation_results.json
results/baseline_v2/: evaluation_results.json
results/baseline_v4/: per_phoneme_per.json  (+1 more)
scripts/: generate_figures.py  loso_eval_modes.py  smoke_test.py
src/: __init__.py
tests/: test_beam_decoder.py  test_config.py  test_constraint_gradient.py  test_dataloader.py  test_evaluate_model.py  test_explainability.py  test_losses.py  test_metrics.py  test_symbolic_constraint.py  test_training_step.py  test_utils.py
(+85 files in other folders)
